tests/censoredusername/fail/integer_bounds/copy_2^63.wsa
; Fails on 64-bit (and 32-bit) machines
copy 9223372036854775808
