tests/censoredusername/fail/integer_bounds/copy_2^63.err
Error: At index 40 (line 2, column 1):
Copy argument too large: 9223372036854775808
